clusters/vollminlab-cluster/apps/bookstack/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "1"
    meta.helm.sh/release-name: bookstack
    meta.helm.sh/release-namespace: bookstack
  creationTimestamp: "2025-02-11T03:06:17Z"
  generation: 1
  labels:
    app: bookstack
    app.kubernetes.io/managed-by: Helm
    chart: bookstack-1.4.1
    heritage: Helm
    release: bookstack
  name: bookstack
  namespace: bookstack
  resourceVersion: "5250764"
  uid: 14ed752e-9b8a-47b8-92b3-9f181bc614ab
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: bookstack
      release: bookstack
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: bookstack
        release: bookstack
    spec:
      containers:
      - env:
        - name: DB_HOST
          value: bookstack-mariadb
        - name: DB_DATABASE
          value: bookstack
        - name: DB_USERNAME
          value: bookstack
        - name: DB_PASSWORD
          valueFrom:
            secretKeyRef:
              key: mariadb-password
              name: bookstack-mariadb
        image: solidnerd/bookstack:0.30.4
        imagePullPolicy: IfNotPresent
        livenessProbe:
          failureThreshold: 3
          httpGet:
            path: /
            port: http
            scheme: HTTP
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
        name: bookstack
        ports:
        - containerPort: 8080
          name: http
          protocol: TCP
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /
            port: http
            scheme: HTTP
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /var/www/bookstack/public/uploads
          name: uploads
        - mountPath: /var/www/bookstack/storage/uploads
          name: storage
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext:
        fsGroup: 33
      serviceAccount: bookstack
      serviceAccountName: bookstack
      terminationGracePeriodSeconds: 30
      volumes:
      - name: uploads
        persistentVolumeClaim:
          claimName: bookstack-uploads
      - name: storage
        persistentVolumeClaim:
          claimName: bookstack-storage
status:
  availableReplicas: 1
  conditions:
  - lastTransitionTime: "2025-02-11T03:06:17Z"
    lastUpdateTime: "2025-02-11T03:07:03Z"
    message: ReplicaSet "bookstack-56b756dc84" has successfully progressed.
    reason: NewReplicaSetAvailable
    status: "True"
    type: Progressing
  - lastTransitionTime: "2025-02-11T03:07:25Z"
    lastUpdateTime: "2025-02-11T03:07:25Z"
    message: Deployment has minimum availability.
    reason: MinimumReplicasAvailable
    status: "True"
    type: Available
  observedGeneration: 1
  readyReplicas: 1
  replicas: 1
  updatedReplicas: 1
