clusters/vollminlab-cluster/apps/bookstack/service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    meta.helm.sh/release-name: bookstack
    meta.helm.sh/release-namespace: bookstack
  creationTimestamp: "2025-02-11T03:06:17Z"
  labels:
    app: bookstack
    app.kubernetes.io/managed-by: Helm
    chart: bookstack-1.4.1
    heritage: Helm
    release: bookstack
  name: bookstack
  namespace: bookstack
  resourceVersion: "5250337"
  uid: 545a4fca-81f8-4f90-87b9-be87aa2ccb11
spec:
  clusterIP: 10.111.67.213
  clusterIPs:
  - 10.111.67.213
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: http
  selector:
    app: bookstack
    release: bookstack
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
apiVersion: v1
kind: Service
metadata:
  annotations:
    meta.helm.sh/release-name: bookstack
    meta.helm.sh/release-namespace: bookstack
  creationTimestamp: "2025-02-11T03:06:17Z"
  labels:
    app.kubernetes.io/component: primary
    app.kubernetes.io/instance: bookstack
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: mariadb
    helm.sh/chart: mariadb-9.2.5
  name: bookstack-mariadb
  namespace: bookstack
  resourceVersion: "5250340"
  uid: 666e9dbe-965f-49bb-aa8a-cad00e1079a4
spec:
  clusterIP: 10.106.33.61
  clusterIPs:
  - 10.106.33.61
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - name: mysql
    port: 3306
    protocol: TCP
    targetPort: mysql
  selector:
    app.kubernetes.io/component: primary
    app.kubernetes.io/instance: bookstack
    app.kubernetes.io/name: mariadb
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
